# awesome-agentic-devops

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.antigravity/: mcp.json
.cursor/rules/: awesome-agentic-devops.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: new-entry.yml  report-broken-link.yml
.github/workflows/: audit.yml  validate.yml  (+1 more)
data/: catalog.full.json  catalog.json  repos.yaml
devops-ai/: DEVOPS_SKILL.md  README.md  official-devops-mcp-catalog.json
docs/: catalog-comparison.md  catalog-data.md  community-skills-catalog.md  compliance-evidence.md  curation-strategy.md  framework-comparison.md  google-skills-included.md  install-skills.md  official-skills-catalog.md  safety-model.md  scoring.md
evals/: mock-scenarios.yaml
reports/: github-repo-audit.json  github-repo-audit.md  mock-eval-results.json  mock-eval-results.md
scripts/: audit_github_repos.py  devops_catalog_mcp_server.py  import_archestra_signals.py  install_skills.py  run_mock_eval_scenarios.py  setup_devops_ai_clients.py  sync_catalog_json.py  sync_full_catalog_json.py  sync_readme_counts.py  validate_repos_yaml.py
templates/: agent-scorecard.md  eval-cases.md  runbook-agent-spec.md
tests/: test_audit_github_repos.py  test_catalog_json.py  test_full_catalog_json.py  test_import_archestra_signals.py  test_install_skills.py  test_mock_eval_scenarios.py  test_readme_counts.py  test_repos_yaml.py  test_setup_devops_ai_clients.py
(+29 files in other folders)
